Fix s3 logs key for codebuild project.

--- a/generators/app/templates/template.yml
+++ b/generators/app/templates/template.yml
@@ -1517,6 +1517,9 @@
                                         "Fn::ImportValue": "TestsCiProjectCodeBuildLogsS3Arn"
                                     },
                                     {
+                                      "Ref": "ProjectId"
+                                    },
+                                    {
                                         "Fn::Sub": "${ProjectId}-test"
                                     }
                                 ]
