--- a/generators/app/templates/template.yml
+++ b/generators/app/templates/template.yml
@@ -2141,7 +2141,7 @@
                                         },
                                         "Configuration": {
                                             "ProjectName": {
-                                                "Ref": "ProjectId"
+                                                "Fn::Sub": "${ProjectId}-test"
                                             }
                                         },
                                         "InputArtifacts": [
