--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-mocha": "^5.2.1",
     "eslint-plugin-node": "^8.0.1",
     "mocha": "^5.2.0",
+    "sinon": "^7.2.5",
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^1.9.1"
   }
