Ruby On Rails. Move scripts creation to another generator to have ability to update scripts

--- a/generators/rubyonrails/templates/.env.example
+++ b/generators/rubyonrails/templates/.env.example
@@ -1,4 +1,4 @@
-DEV_DATABASE=<%= db_name %>
+DEV_DATABASE=<%= application_name %>
 DEV_DATABASE_USERNAME=postgres
 DEV_DATABASE_PASSWORD=postgres
 AWS_ACCESS_KEY_ID=xxx
