--- a/generators/put-scripts/templates/frontend-deployment/app-sam.yml
+++ b/generators/put-scripts/templates/frontend-deployment/app-sam.yml
@@ -21,7 +21,7 @@ Parameters:
 
 Globals:
   Function:
-    Runtime: nodejs8.10
+    Runtime: nodejs10.x
     Environment:
       Variables:
         SLACK_HOOK_URL: !Ref SlackNotificationsHook
