--- a/generators/put-scripts/templates/nodejs/run.tests.buildspec.yml
+++ b/generators/put-scripts/templates/nodejs/run.tests.buildspec.yml
@@ -10,14 +10,15 @@ phases:
       - echo "Put your after-test script here. E.g setup test database"
   build:
     commands:
-      - npm run test:cov
+#      - npm run test:cov
       - ls
   post_build:
     commands:
       - echo "Put your after-test script here. E.g delete test database"
 
-artifacts:
-  type: zip
-  files:
-    - coverage/**/*
-  name: ${PROJECT_ID}_BuildArtifact
+#artifacts:
+#  type: zip
+#  files:
+#    - coverage/**/*
+#  name: ${PROJECT_ID}_BuildArtifact
+#
