--- a/generators/put-scripts/templates/frontend-deployment/buildspec.yml
+++ b/generators/put-scripts/templates/frontend-deployment/buildspec.yml
@@ -1,11 +1,14 @@
-version: 0.1
+version: 0.2
 
 env:
   variables:
-    REACT_APP_API_URL:  https://geniepad.brocoders.xyz
+    # ENV_NAME: VALUE
 
 phases:
   install:
+    # https://docs.aws.amazon.com/codebuild/latest/userguide/build-env-ref-available.html
+    runtime-version:
+      nodejs: 12.x
     commands:
       - cd $CODEBUILD_SRC_DIR;
       - npm install -g typescript
@@ -22,6 +25,7 @@ phases:
   post_build:
     commands:
       - cd $CODEBUILD_SRC_DIR/build; zip -r ../package.zip *
+      - cd ../
       - aws cloudformation package --template-file app-sam.yml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file app-output_sam.yaml
 artifacts:
   files:
