--- a/generators/put-scripts/templates/rubyonrails/run.tests.buildspec.yml
+++ b/generators/put-scripts/templates/rubyonrails/run.tests.buildspec.yml
@@ -2,6 +2,9 @@ version: 0.2
 
 phases:
   install:
+    # https://docs.aws.amazon.com/codebuild/latest/userguide/build-env-ref-available.html
+    runtime-version:
+      ruby: 2.6
     commands:
       - echo "Put your install conmmands here"
   pre_build:
