--- a/generators/frontend-scripts/templates/.env.example
+++ b/generators/frontend-scripts/templates/.env.example
@@ -2,4 +2,4 @@ REACT_APP_API_URL=<%= apiUrl %>
 PORT=3000
 NODE_ENV=development
 NODE_PATH='src/'
-PUBLIC_URL=http://localhost:5000
+PUBLIC_URL=https://<%= domain %>
