--- a/generators/frontend-scripts/templates/cra/.env.example
+++ b/generators/frontend-scripts/templates/cra/.env.example
@@ -1,5 +1,5 @@
 REACT_APP_API_URL=<%= apiUrl %>
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 NODE_PATH='src/'
 PUBLIC_URL=https://<%= domain %>
