--- a/generators/nestjs-scripts/templates/appspec.yml
+++ b/generators/nestjs-scripts/templates/appspec.yml
@@ -12,3 +12,6 @@ hooks:
     - location: scripts/stop_server
       timeout: 300
       runas: root
+  BeforeInstall:
+    - location: scripts/cleanup.sh
+      runas: root
