--- a/generators/frontend-buildspec/templates/none/buildspec.yml
+++ b/generators/frontend-buildspec/templates/none/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 phases:
   install:
-    runtime-version:
+    runtime-versions:
       nodejs: 12.x
     commands:
       - cd $CODEBUILD_SRC_DIR;
