--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,8 @@
     "mocha"
   ],
   "rules": {
-    "comma-style": [ 2, "first" ],
-    "comma-dangle": [ 2, "never" ],
+    "comma-style": [ 2, "last" ],
+    "comma-dangle": [ 2, "always-multiline" ],
     "camelcase": [0],
     "semi": [0],
     "no-underscore-dangle": [0],
