--- a/generators/nextjs-scripts/templates/appspec.yml
+++ b/generators/nextjs-scripts/templates/appspec.yml
@@ -3,6 +3,11 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/app
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
 hooks:
   AfterInstall:
     - location: scripts/install_dependencies
